--- a/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
@@ -7,17 +7,18 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="205" id="KGk-i7-Jjw" customClass="RequestDetailTableViewCell" customModule="Hawaii" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="338" height="205"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="239" id="KGk-i7-Jjw" customClass="RequestDetailTableViewCell" customModule="Hawaii" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="338" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="338" height="204.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="338" height="238.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gXn-VY-h8j">
@@ -100,8 +101,8 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
                         </userDefinedRuntimeAttributes>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rda-Yz-vMM">
-                        <rect key="frame" x="53.5" y="114" width="36" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dates" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rda-Yz-vMM">
+                        <rect key="frame" x="45" y="114" width="44.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -109,21 +110,37 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-CS-jb0">
+                        <rect key="frame" x="207" y="187" width="115" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="115" id="7rz-PK-E6Q"/>
+                            <constraint firstAttribute="height" constant="30" id="HSE-Rq-787"/>
+                        </constraints>
+                        <state key="normal" title="Cancel"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="redAndRounded"/>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="onCancel:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="txW-Ic-dqt"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="v3N-Nv-jh7" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="0Je-Qd-bfv"/>
                     <constraint firstItem="agW-6a-dAJ" firstAttribute="leading" secondItem="eLw-ud-0qs" secondAttribute="leading" id="0hJ-NM-urF"/>
                     <constraint firstItem="eLw-ud-0qs" firstAttribute="leading" secondItem="kQv-mE-Odu" secondAttribute="trailing" constant="16" id="0qo-0c-qDl"/>
                     <constraint firstItem="H53-KI-ADV" firstAttribute="centerY" secondItem="gXn-VY-h8j" secondAttribute="centerY" id="2Ac-jd-i24"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="rCg-Dk-w4V" secondAttribute="bottom" constant="55" id="3T4-nq-PKN"/>
                     <constraint firstAttribute="trailing" secondItem="eLw-ud-0qs" secondAttribute="trailing" constant="16" id="5Gp-Vh-HD0"/>
+                    <constraint firstItem="Gry-CS-jb0" firstAttribute="top" secondItem="CjV-k9-aEj" secondAttribute="bottom" constant="14" id="5gn-fW-GNk"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="centerY" secondItem="rCg-Dk-w4V" secondAttribute="centerY" id="62I-Qh-U1q"/>
-                    <constraint firstAttribute="bottom" secondItem="rCg-Dk-w4V" secondAttribute="bottom" constant="31.5" id="7Q7-y7-OCQ"/>
                     <constraint firstItem="Q6R-x6-Cos" firstAttribute="centerY" secondItem="H53-KI-ADV" secondAttribute="centerY" id="8bQ-V3-U5Z"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="trailing" secondItem="Rda-Yz-vMM" secondAttribute="trailing" id="AoP-cA-hnm"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="top" secondItem="Rda-Yz-vMM" secondAttribute="bottom" constant="17.5" id="Ap5-X7-61U"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="height" secondItem="Rda-Yz-vMM" secondAttribute="height" id="EYV-Mo-by4"/>
                     <constraint firstAttribute="trailing" secondItem="Q6R-x6-Cos" secondAttribute="trailing" constant="24" id="GKr-hF-gP8"/>
                     <constraint firstItem="Rda-Yz-vMM" firstAttribute="top" secondItem="kQv-mE-Odu" secondAttribute="bottom" constant="13" id="GrH-Ho-1CZ"/>
+                    <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="CjV-k9-aEj" secondAttribute="trailing" id="Jze-ee-lui"/>
                     <constraint firstItem="v3N-Nv-jh7" firstAttribute="top" secondItem="gXn-VY-h8j" secondAttribute="bottom" constant="5" id="MMV-Bs-ZBt"/>
                     <constraint firstItem="H53-KI-ADV" firstAttribute="leading" secondItem="gXn-VY-h8j" secondAttribute="trailing" constant="23" id="NcZ-M8-cYz"/>
                     <constraint firstItem="gXn-VY-h8j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="QaA-5u-Ahe"/>
@@ -142,11 +159,13 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="cancelButton" destination="Gry-CS-jb0" id="eHe-la-2X7"/>
                 <outlet property="date" destination="Q6R-x6-Cos" id="m2I-Eb-tD7"/>
+                <outlet property="requestDates" destination="agW-6a-dAJ" id="2Na-Aj-irp"/>
+                <outlet property="requestDuration" destination="eLw-ud-0qs" id="Pmf-rW-fz8"/>
                 <outlet property="requestImage" destination="gXn-VY-h8j" id="vU1-pY-x6B"/>
-                <outlet property="requestNumberOfDays" destination="eLw-ud-0qs" id="Pmf-rW-fz8"/>
                 <outlet property="requestReason" destination="CjV-k9-aEj" id="h2j-eT-z4Z"/>
-                <outlet property="requestStartDate" destination="agW-6a-dAJ" id="2Na-Aj-irp"/>
+                <outlet property="requestStatus" destination="H53-KI-ADV" id="KAP-YM-hkP"/>
             </connections>
             <point key="canvasLocation" x="25" y="-18.5"/>
         </tableViewCell>
