--- a/Hawaii/UI/Storyboard/Approve.storyboard
+++ b/Hawaii/UI/Storyboard/Approve.storyboard
@@ -10,16 +10,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Approve View Controller-->
+        <!--Approve requests-->
         <scene sceneID="3q1-dw-mcl">
             <objects>
                 <viewController id="490-4Z-IJJ" customClass="ApproveViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mec-uv-9S8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aC0-w3-KiA">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -32,7 +32,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rxv-yv-h8v"/>
                     </view>
-                    <navigationItem key="navigationItem" id="wyT-FA-CMs"/>
+                    <navigationItem key="navigationItem" title="Approve requests" id="wyT-FA-CMs"/>
                     <connections>
                         <outlet property="tableView" destination="aC0-w3-KiA" id="QNR-Cs-F5D"/>
                     </connections>
@@ -48,7 +48,7 @@
                     <tabBarItem key="tabBarItem" title="Approve" image="airplane_mode_on" id="KeV-4t-7VP"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aJX-lh-v0C">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="aJX-lh-v0C">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
