--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -420,14 +420,18 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CGA-en-kvo">
                                 <rect key="frame" x="20" y="114" width="335" height="594"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="daA-wR-cf3">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="daA-wR-cf3">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="594"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="594" id="1Si-ke-HeW"/>
+                                        </constraints>
                                     </tableView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="centerX" secondItem="CGA-en-kvo" secondAttribute="centerX" id="1WG-ck-AUi"/>
+                                    <constraint firstAttribute="height" constant="594" id="BRc-lU-gMe"/>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="top" secondItem="CGA-en-kvo" secondAttribute="top" id="hJo-41-v7m"/>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="centerY" secondItem="CGA-en-kvo" secondAttribute="centerY" id="xnS-Io-n6j"/>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="leading" secondItem="CGA-en-kvo" secondAttribute="leading" id="zfk-gt-Zwp"/>
@@ -436,19 +440,19 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="CGA-en-kvo" firstAttribute="leading" secondItem="aYD-9m-Icx" secondAttribute="leading" constant="20" id="0my-l1-9Dd"/>
+                            <constraint firstItem="CGA-en-kvo" firstAttribute="top" secondItem="aYD-9m-Icx" secondAttribute="top" constant="70" id="5vb-EB-EEC"/>
                             <constraint firstItem="X58-2L-5pJ" firstAttribute="leading" secondItem="Vzf-J1-QA4" secondAttribute="leading" id="7DU-mP-sd2"/>
-                            <constraint firstItem="CGA-en-kvo" firstAttribute="centerX" secondItem="aYD-9m-Icx" secondAttribute="centerX" id="9Bp-sa-nVD"/>
+                            <constraint firstItem="CGA-en-kvo" firstAttribute="leading" secondItem="aYD-9m-Icx" secondAttribute="leading" constant="20" id="7yY-5s-3dT"/>
                             <constraint firstItem="X58-2L-5pJ" firstAttribute="top" secondItem="Vzf-J1-QA4" secondAttribute="top" id="FBH-AD-gv9"/>
                             <constraint firstItem="X58-2L-5pJ" firstAttribute="centerY" secondItem="aYD-9m-Icx" secondAttribute="centerY" id="Krg-4X-evo"/>
                             <constraint firstItem="X58-2L-5pJ" firstAttribute="centerX" secondItem="aYD-9m-Icx" secondAttribute="centerX" id="ZMv-ki-B3a"/>
-                            <constraint firstItem="aYD-9m-Icx" firstAttribute="bottom" secondItem="CGA-en-kvo" secondAttribute="bottom" constant="70" id="bZi-Ia-X56"/>
-                            <constraint firstItem="CGA-en-kvo" firstAttribute="centerY" secondItem="aYD-9m-Icx" secondAttribute="centerY" id="dHr-ks-YDy"/>
+                            <constraint firstItem="CGA-en-kvo" firstAttribute="centerX" secondItem="aYD-9m-Icx" secondAttribute="centerX" id="pSl-aQ-Cfg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aYD-9m-Icx"/>
                     </view>
                     <connections>
                         <outlet property="clickableView" destination="X58-2L-5pJ" id="g8m-RO-gft"/>
+                        <outlet property="heightConstraint" destination="BRc-lU-gMe" id="Tsw-bh-njW"/>
                         <outlet property="requestDialog" destination="CGA-en-kvo" id="NBb-hk-R7o"/>
                         <outlet property="tableView" destination="daA-wR-cf3" id="GFP-yA-uLq"/>
                     </connections>
@@ -483,11 +487,11 @@
             <objects>
                 <viewController id="Qer-bd-5aa" customClass="DatePickerViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="afa-Ke-xqd">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rre-HC-BMC">
-                                <rect key="frame" x="20" y="10" width="374" height="21"/>
+                                <rect key="frame" x="20" y="10" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -496,8 +500,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="EeG-bj-h9t" customClass="WhiteUIPicker" customModule="Hawaii" customModuleProvider="target">
-                                <rect key="frame" x="10" y="41" width="394" height="100"/>
-                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="10" y="41" width="355" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="eWH-CT-pBz"/>
                                 </constraints>
@@ -509,7 +512,7 @@
                                 </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJR-yx-EbL">
-                                <rect key="frame" x="20" y="151" width="374" height="21"/>
+                                <rect key="frame" x="20" y="151" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -518,12 +521,13 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="B30-ko-KnE" customClass="WhiteUIPicker" customModule="Hawaii" customModuleProvider="target">
-                                <rect key="frame" x="10" y="182" width="394" height="100"/>
+                                <rect key="frame" x="10" y="182" width="355" height="100"/>
                                 <date key="date" timeIntervalSinceReferenceDate="551889391.40092003">
                                     <!--2018-06-28 14:36:31 +0000-->
                                 </date>
                             </datePicker>
                         </subviews>
+                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="B30-ko-KnE" firstAttribute="leading" secondItem="EeG-bj-h9t" secondAttribute="leading" id="07F-7m-fhj"/>
                             <constraint firstItem="JJR-yx-EbL" firstAttribute="top" secondItem="EeG-bj-h9t" secondAttribute="bottom" constant="10" id="4xp-Ap-SUM"/>
@@ -589,11 +593,11 @@
             <objects>
                 <viewController id="Xx0-t7-Yha" customClass="RemainigDaysViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MhO-bX-E5G">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOLIDAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tkr-6z-WNa">
-                                <rect key="frame" x="20.000000000000007" y="0.0" width="102.66666666666669" height="30"/>
+                                <rect key="frame" x="16.000000000000007" y="44" width="102.66666666666669" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5fm-Hx-gfF"/>
                                 </constraints>
@@ -636,49 +640,49 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lJ-4U-t06">
-                                <rect key="frame" x="36.666666666666664" y="91" width="42.999999999999993" height="19.666666666666671"/>
+                                <rect key="frame" x="15.999999999999996" y="135" width="59.666666666666657" height="19.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jei-Iu-umK">
-                                <rect key="frame" x="19.999999999999996" y="117.66666666666667" width="59.666666666666657" height="19.000000000000014"/>
+                                <rect key="frame" x="15.999999999999996" y="161.66666666666666" width="59.666666666666657" height="19"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7P-r6-3gB">
-                                <rect key="frame" x="95.666666666666671" y="84" width="27" height="26.666666666666671"/>
+                                <rect key="frame" x="91.666666666666671" y="128" width="27" height="26.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 day(s)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sef-Jo-yBo">
-                                <rect key="frame" x="95.666666666666671" y="118.66666666666667" width="54.333333333333329" height="18.000000000000014"/>
+                                <rect key="frame" x="91.666666666666671" y="162.66666666666666" width="54.333333333333329" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRS-EX-H1C">
-                                <rect key="frame" x="130.66666666666666" y="92.666666666666671" width="32.333333333333343" height="18"/>
+                                <rect key="frame" x="126.66666666666667" y="136.66666666666666" width="32.333333333333329" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w5p-4a-a2b">
-                                <rect key="frame" x="241" y="91" width="76" height="19.666666666666671"/>
+                                <rect key="frame" x="206" y="135" width="76" height="19.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ob-v5-jZQ">
-                                <rect key="frame" x="361.66666666666669" y="92.666666666666671" width="32.333333333333314" height="18"/>
+                                <rect key="frame" x="326.66666666666669" y="136.66666666666666" width="32.333333333333314" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vex-0D-Xio">
-                                <rect key="frame" x="330" y="84" width="24" height="26.666666666666671"/>
+                                <rect key="frame" x="295" y="128" width="24" height="26.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
