--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -408,7 +408,7 @@
         <!--Request Details View Controller-->
         <scene sceneID="q2q-HI-UbE">
             <objects>
-                <viewController modalPresentationStyle="overFullScreen" id="dQu-hX-waz" customClass="RequestDetailsViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RequestDetailsViewController" modalPresentationStyle="overFullScreen" id="dQu-hX-waz" customClass="RequestDetailsViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vzf-J1-QA4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
