--- a/Hawaii/UI/Storyboard/Employee.storyboard
+++ b/Hawaii/UI/Storyboard/Employee.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c11-4n-1mD">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="538"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="594"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dCn-vf-GKa">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="29"/>
@@ -29,8 +29,13 @@
                                             <segment title="Custom"/>
                                         </segments>
                                     </segmentedControl>
+                                    <searchBar contentMode="redraw" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qt5-Oh-C6o">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="56"/>
+                                        <color key="barTintColor" red="1" green="0.00060692348051816225" blue="0.20844578742980957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YM-s3-wOU">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                        <rect key="frame" x="0.0" y="84" width="375" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w9-Fw-vJM">
                                                 <rect key="frame" x="149" y="20.5" width="76" height="20.5"/>
@@ -78,7 +83,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="h0N-F3-VaT">
-                                        <rect key="frame" x="0.0" y="88" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="144" width="375" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAX-04-sVy">
                                                 <rect key="frame" x="0.0" y="0.0" width="53.5" height="50"/>
@@ -157,7 +162,7 @@
                                         </constraints>
                                     </stackView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UXb-JU-fla" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                                        <rect key="frame" x="0.0" y="138" width="375" height="400"/>
+                                        <rect key="frame" x="0.0" y="194" width="375" height="400"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="750" constant="400" id="YTW-0F-IwW"/>
@@ -179,7 +184,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="c11-4n-1mD" firstAttribute="leading" secondItem="XkH-vt-f9n" secondAttribute="leading" id="4ee-FC-TPe"/>
-                            <constraint firstItem="c11-4n-1mD" firstAttribute="top" secondItem="XkH-vt-f9n" secondAttribute="top" id="Hb3-5p-ljt"/>
+                            <constraint firstItem="c11-4n-1mD" firstAttribute="top" secondItem="XkH-vt-f9n" secondAttribute="top" id="8gW-qf-eEu"/>
                             <constraint firstItem="c11-4n-1mD" firstAttribute="centerX" secondItem="XkH-vt-f9n" secondAttribute="centerX" id="yTx-0m-1bS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XkH-vt-f9n"/>
@@ -190,6 +195,7 @@
                         <outlet property="dateLabel" destination="7w9-Fw-vJM" id="VFe-2c-WCR"/>
                         <outlet property="nextButton" destination="IvF-lm-MTg" id="Ds6-wB-0GB"/>
                         <outlet property="previousButton" destination="xQL-7V-8di" id="mGH-TX-bTE"/>
+                        <outlet property="searchBar" destination="qt5-Oh-C6o" id="fZD-tz-1TG"/>
                         <outlet property="segmentedControl" destination="dCn-vf-GKa" id="O0w-1b-3sH"/>
                         <segue destination="W0R-72-7nz" kind="show" identifier="teamDetails" id="XPp-5I-QX3"/>
                     </connections>
